@@ -1,0 +1,64 @@
+39 0 0 0 1654694 61 0 1024 -128 0 0 0
+39 0 0 1 1654694 61 1 1024 127 0 0 0
+78 0 1 0 1654694 61 0 1024 -128 121 0 0
+78 0 1 1 1654694 61 1 1024 127 121 0 0
+117 0 2 0 1654694 61 0 1024 -128 115 0 0
+117 0 2 1 1654694 61 1 1024 127 115 0 0
+156 0 3 0 1654694 61 0 1024 -128 109 0 0
+156 0 3 1 1654694 61 1 1024 127 109 0 0
+664 4 0 0 1654694 61 0 1024 -128 0 0 0
+664 4 0 1 1654694 61 1 1024 127 0 0 0
+703 4 1 0 1654694 61 0 1024 -128 121 0 0
+703 4 1 1 1654694 61 1 1024 127 121 0 0
+742 4 2 0 1654694 61 0 1024 -128 115 0 0
+742 4 2 1 1654694 61 1 1024 127 115 0 0
+781 4 3 0 1654694 61 0 1024 -128 109 0 0
+781 4 3 1 1654694 61 1 1024 127 109 0 0
+820 5 0 0 1654694 61 0 1024 -128 103 0 0
+820 5 0 1 1654694 61 1 1024 127 103 0 0
+859 5 1 0 1517361 61 0 1024 -128 97 0 0
+859 5 1 1 1517361 61 1 1024 127 97 0 0
+898 5 2 0 1391426 61 0 1024 -128 123 0 0
+898 5 2 1 1391426 61 1 1024 127 123 0 0
+937 5 3 0 1313332 61 0 1024 -128 118 0 0
+937 5 3 1 1313332 61 1 1024 127 118 0 0
+976 6 0 0 1313332 61 0 1024 -128 106 0 0
+976 6 0 1 1313332 61 1 1024 127 106 0 0
+1015 6 1 0 1313332 61 0 1024 -128 126 0 0
+1015 6 1 1 1313332 61 1 1024 127 126 0 0
+1054 6 2 0 1313332 61 0 1024 -128 114 0 0
+1054 6 2 1 1313332 61 1 1024 127 114 0 0
+1093 6 3 0 1313332 61 0 1024 -128 102 0 0
+1093 6 3 1 1313332 61 1 1024 127 102 0 0
+1132 7 0 0 1313332 61 0 1024 -128 122 0 0
+1132 7 0 1 1313332 61 1 1024 127 122 0 0
+1171 7 1 0 1432198 61 0 1024 -128 109 0 0
+1171 7 1 1 1432198 61 1 1024 127 109 0 0
+1210 7 2 0 1561823 61 0 1024 -128 125 0 0
+1210 7 2 1 1561823 61 1 1024 127 125 0 0
+1250 7 3 0 1654694 61 0 1024 -128 108 0 0
+1250 7 3 1 1654694 61 1 1024 127 108 0 0
+1289 8 0 0 1239620 66 0 1024 -128 0 0 0
+1289 8 0 1 1239620 66 1 1024 127 0 0 0
+1328 8 1 0 1239620 66 0 1024 -128 109 0 0
+1328 8 1 1 1239620 66 1 1024 127 109 0 0
+1367 8 2 0 1239620 66 0 1024 -128 123 0 0
+1367 8 2 1 1239620 66 1 1024 127 123 0 0
+1406 8 3 0 1239620 66 0 1024 -128 105 0 0
+1406 8 3 1 1239620 66 1 1024 127 105 0 0
+1445 9 0 0 1239620 66 0 1024 -128 119 0 0
+1445 9 0 1 1239620 66 1 1024 127 119 0 0
+1484 9 1 0 1391426 66 0 1024 -128 101 0 0
+1484 9 1 1 1391426 66 1 1024 127 101 0 0
+1523 9 2 0 1561823 66 0 1024 -128 96 0 0
+1523 9 2 1 1561823 66 1 1024 127 96 0 0
+1562 9 3 0 1654694 66 0 1024 -128 111 0 0
+1562 9 3 1 1654694 66 1 1024 127 111 0 0
+1601 10 0 0 1654694 66 0 1024 -128 105 0 0
+1601 10 0 1 1654694 66 1 1024 127 105 0 0
+1640 10 1 0 1654694 66 0 1024 -128 99 0 0
+1640 10 1 1 1654694 66 1 1024 127 99 0 0
+1679 10 2 0 1654694 66 0 1024 -128 124 0 0
+1679 10 2 1 1654694 66 1 1024 127 124 0 0
+1718 10 3 0 1654694 66 0 1024 -128 118 0 0
+1718 10 3 1 1654694 66 1 1024 127 118 0 0
