@@ -49,6 +49,7 @@ Stable versions
 	- XM: fix Kxx persisting between rows and pattern delay interaction.
 	- XM: fix note without ins# resetting fadeout position and state.
 	- XM: handle out-of-range notes more closely to FT2.
+	- XM: fix setting toneporta target with an active invalid instrument.
 	Changes by Alice Rowan and ds-sloth:
 	- Minor Impulse Tracker loader performance improvements.
 
